added the navbar part

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-  <div class="bg-primary bg-gradient mygradient" style="height: 500px;">
+  <div class="bg-primary bg-gradient mygradient" style="height: 553px;">
     <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
       <div class="container-fluid">
         <a class="nav-link active text-light" href="#"><h3>E-LIB</h3></a>
@@ -52,7 +52,8 @@
   
       </div>
 
-      <div class="col">
+      <div class="col-6">
+        <img class="small-img" src="images/tenage-girl2.png" alt="image">
       </div>
     </div>
   </div>
