--- a/index.html
+++ b/index.html
@@ -56,6 +56,18 @@
         <img class="small-img" src="images/tenage-girl2.png" alt="image">
       </div>
     </div>
+  </div><br><br>
+
+  <div>
+    <div>
+      <h1 class="text-center">Our success</h1>
+      <p class="text-center">Ornare id fames interdum porttitor nulla turpis etiam. Diam vitae sollicitudin at nec nam et pharetra gravida. </p>
+      <p class="text-center">Adipiscing a quis ultrices eu ornare tristique vel nisl orci. </p>
+    </div>
+
+    <div>
+      <div class="row"></div>
+    </div>
   </div>
 
   
