--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="css/style.css">
   <!-- Latest compiled and minified CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
+  <!-- <script src="https://kit.fontawesome.com/051613484a.js" crossorigin="anonymous"></script> -->
+
   <title>E-LIB</title>
 
 </head>
@@ -65,14 +69,62 @@
       <p class="text-center">Adipiscing a quis ultrices eu ornare tristique vel nisl orci. </p>
     </div>
 
+    <div class="row m-5">
+        <div class="col-2">
+          <h1 class="text-center text-gradient">15k+</h1>
+          <p class="text-center lead">Our students</p>
+        </div>
+        <div class="col-2">
+          <h1 class="text-center">75%</h1>
+          <p class="text-center lead">Total success</p>
+        </div>
+        <div class="col-2">
+          <h1 class="text-center">39%</h1>
+          <p class="text-center lead">Main questions</p>
+        </div>
+        <div class="col-2">
+          <h1 class="text-center">26k+</h1>
+          <p class="text-center lead">Chief experts</p>
+        </div>
+        <div class="col-2">
+          <h1 class="text-center">2</h1>
+          <P class="text-center lead">Years of experience</P>
+        </div>
+        <div class="col-2">
+          <h1 class="text-center">100%</h1>
+          <P class="text-center lead">Qusetions answered</P>
+        </div>
+
+    </div>
+  </div>
+
+  <div>
     <div>
-      <div class="row"></div>
+      <h1 class="text-center mt-4 mb-4">All-In-One <span class="text-info">Cloud Software</span></h1>
+      <p class="text-center">E-LIB is one powerful online software suite that combines all the tools needed to run a successful school or office.
+It's easy, affordable and accessible from anywhere.</p>
+    </div>
+    <div class="row text-center">
+      <div class="col shadow-lg p-5 m-5 bg-body rounded">
+        <img class="cal" src="images/billing.png" alt="Billing">
+        <h5 class="some-intro">Online Billing, Invoicing, & Contracts, Management System</h5>
+        <p><small>Simple and secure control of your organization's financial and legal transactions. Send customized invoices and contracts</small></p>
+      </div>
+      <div class=" col shadow-lg p-5 m-5 bg-body rounded">
+        <!-- <a href="#"><i class="fa fa-calendar fa-lg mycalendar" aria-hidden="true"></i></a> -->
+        <img class="cal" src="images/calendar.png" alt="Calendar">
+        <h5 class="some-intro ">Easy Scheduling & Attendance Tracking</h5>
+        <p><small>Schedule and reserve classrooms at one campus or multiple campuses. Keep detailed records of student attendance</small></p>
+      </div>
+      <div class="col shadow-lg p-5 m-5 bg-body rounded">
+        <img class="cal" src="images/customer.png" alt="Customer image">
+        <h5 class="some-intro">Customer Tracking</h5>
+        <p><small>Automate and track emails to individuals or groups. Skilline's built-in system helps organize your organization </small></p>
+      </div>
     </div>
   </div>
 
   
-
-
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
