student and facilitator parts

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Latest compiled and minified CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous"> -->
   <!-- <script src="https://kit.fontawesome.com/051613484a.js" crossorigin="anonymous"></script> -->
 
   <title>E-LIB</title>
@@ -103,7 +103,7 @@
       <h1 class="text-center mt-4 mb-4">All-In-One <span class="text-info">Cloud Software</span></h1>
       <p class="text-center">E-LIB is one powerful online software suite that combines all the tools needed to run a successful school or office.
 It's easy, affordable and accessible from anywhere.</p>
-    </div>
+    </div><br><br>
     <div class="row text-center">
       <div class="col shadow-lg p-5 m-5 bg-body rounded">
         <img class="cal" src="images/billing.png" alt="Billing">
@@ -123,6 +123,42 @@ It's easy, affordable and accessible from anywhere.</p>
       </div>
     </div>
   </div>
+
+  <div>
+    <div class="row text-center m-5">
+      <h1><span class="part1">What is </span><span class="part2">E-LIB?</span></h1>
+      <p >E-LIB is a platform that allows educators to create online classes whereby they <br>
+        can store the course materials online; manage assignments, quizzes and exams; <br> monitor due dates; grade results and provide students with feedback all in one place.</p>
+    </div>
+
+    <!-- <div class="row facilitator">
+      <h1>FOR FACILITATORS</h1>
+
+
+    </div> -->
+    <div class="row">
+
+    <div class="card img-fluid m-5" style="width:500px; height: 300;">
+      <img class="card-img-top" src="/images/facilitator.png" alt="Card image" style="width:100%; height: 100%;">
+      <div class="card-img-overlay">
+        <!-- <h4 class="card-title">John Doe</h4> -->
+        <h3 class="card-text text-center text-light facilitator">FOR FACILITATORS</h3>
+        <a href="#" class="btn btn-outline-light btn-fac rounded-pill">Start a class today</a>
+      </div>
+    </div>
+
+    <div class="card img-fluid m-5" style="width:500px; height: 300;">
+      <img class="card-img-top" src="/images/student.png" alt="Card image" style="width:100%">
+      <div class="card-img-overlay">
+        <!-- <h4 class="card-title">John Doe</h4> -->
+        <h3 class="card-text text-center text-light facilitator">FOR STUDENTS</h3>
+        <a href="#" class="btn btn-fac text-light rounded-pill bg-primary text-center"><small>Register for a course</small></a>
+      </div>
+    </div>
+    </div>
+    
+  </div>
+
 
   
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
